--- a/packages/security/petdoor.yaml
+++ b/packages/security/petdoor.yaml
@@ -1,19 +1,17 @@
 ---
 
-sensor:
-  - platform: template
-    sensors:
-      # Battery template sensor
-      kitchen_pet_door_battery:
-        unique_id: kitchen_pet_door_battery
-        friendly_name: "Kitchen Pet Door Battery"
-        unit_of_measurement: '%'
-        icon_template: "mdi:battery-arrow-down"
-        value_template: >-
-          {% set battery_voltage = states('sensor.kitchen_kitchen_battery')|float %}
-          {% set battery_percent = (battery_voltage - 4.8)*100 %}
-          {% from 'formatter.jinja' import format_number %}
-          {{ format_number(battery_percent) }}
+template:
+- sensor:
+  - unique_id: kitchen_pet_door_battery
+    unit_of_measurement: '%'
+    default_entity_id: sensor.kitchen_pet_door_battery
+    icon: mdi:battery-arrow-down
+    name: Kitchen Pet Door Battery
+    state: >-
+      {% set battery_voltage = states('sensor.kitchen_kitchen_battery')|float %}
+      {% set battery_percent = (battery_voltage - 4.8)*100 %}
+      {% from 'formatter.jinja' import format_number %}
+      {{ format_number(battery_percent) }}
 
 automation:
   ### Notify state change
