Fix garage door cover position attribute to return numeric values
- Changed position template from boolean to numeric (0-100)
- Front garage: now returns 100 when open, 0 when closed
- Back garage: now returns 100 when open, 0 when closed
- Fixes compliance with Home Assistant template cover documentation

--- a/packages/security/cover_garage_doors.yaml
+++ b/packages/security/cover_garage_doors.yaml
@@ -23,7 +23,7 @@ template:
             mdi:garage
           {% endif %}
         name: Garage Door Front
-        position: '{{ is_state(''binary_sensor.front_garage_door_window'', ''on'') }}'
+        position: "{{ 100 if is_state('binary_sensor.front_garage_door_window', 'on') else 0 }}"
   # Back Garage Door
   - cover:
       - device_class: garage
@@ -47,7 +47,7 @@ template:
             mdi:garage
           {% endif %}
         name: Garage Door Back
-        position: '{{ is_state(''binary_sensor.back_garage_door'', ''on'') }}'
+        position: "{{ 100 if is_state('binary_sensor.back_garage_door', 'on') else 0 }}"
 
 
 ## Alert
