Fix Dreame vacuum property request timeout with adaptive batch sizing
Implements hybrid adaptive batch size approach (Option 5.5) to resolve
timeout issues during device initialization on certain firmware versions.

Problem:
- Integration fails to initialize with 'No response from the device' errors
- Timeout occurs when requesting properties in batches of 15
- Firmware-specific issue (e.g., firmware 4.3.9_3204)
- Our device requires batch size of 5 to work reliably

Solution:
- Phase 1: Conservative default batch size of 5 (down from 15)
- Phase 2: Adaptive fallback that reduces batch size on timeout
  - Automatically reduces: 5 → 2 → 1 if needed
  - Logs warnings for debugging
  - Graceful degradation with error handling

Performance impact:
- ~12-15 requests instead of ~4-5 requests
- +5-10 seconds on initial connection only
- Acceptable tradeoff for reliability and clean startup

Changes:
- custom_components/dreame_vacuum/dreame/device.py: Modified _request_properties()
- docs/: Added comprehensive documentation and quick reference
- logging/logger.yaml: Adjusted dreame_vacuum log level to warning

Maintenance note:
This is a custom patch that will be overwritten on integration updates.
See docs/dreame-vacuum-property-batch-size-fix.md for details.

References:
- GitHub Issue: https://github.com/Tasshack/dreame-vacuum/issues/725
- Integration: https://github.com/Tasshack/dreame-vacuum

--- a/logging/logger.yaml
+++ b/logging/logger.yaml
@@ -18,7 +18,7 @@ logs:
   homeassistant.helpers.script: debug
   homeassistant.loader: error
 
-  custom_components.dreame_vacuum: info
+  custom_components.dreame_vacuum: warning
 
   custom_components.llama_conversation.conversation: info
 
